# limx_hybrid

./: .gitignore  CMakeLists.txt  main.cpp  param.yaml
controller/: Controller.cpp  Controller.h  LegController.cpp  LegController.h  WholeBodyController.cpp  WholeBodyController.h
data/: DataSets.h  EstimatedState.h  GaitData.h  JointsCmd.h  MeasuredState.h  RobotModelData.h  SharedMemoryInterface.h  SwitchState.h  TaskData.h  UserCmd.h
estimator/: Estimator.cpp  Estimator.h
examples/: CMakeLists.txt  wl_template.cpp
gait/: Gait.cpp  GaitScheduler.cpp  GaitScheduler.h
lib/win/: limx_robot_sdk.lib
planner/: CoMPlannerMPC.cpp  CoMPlannerMPC.h  FootPlanner.cpp  FootPlanner.h  FootSwingTrajectory.cpp  FootSwingTrajectory.h  Planner.cpp  Planner.h  WheelCoMPlanner.cpp  WheelCoMPlanner.h
sim/: README.md
sim/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
sim/devel/lib/pkgconfig/: legged_gazebo.pc  limx_robot_sdk_sim.pc  wheel_legged_robot_description.pc
sim/devel/share/legged_gazebo/cmake/: legged_gazeboConfig.cmake
sim/devel/share/limx_robot_sdk_sim/cmake/: limx_robot_sdk_simConfig.cmake
sim/devel/share/wheel_legged_robot_description/cmake/: wheel_legged_robot_descriptionConfig.cmake
sim/install/: .rosinstall  local_setup.sh  setup.sh
sim/install/lib/pkgconfig/: legged_gazebo.pc  limx_robot_sdk_sim.pc  wheel_legged_robot_description.pc
sim/install/share/legged_gazebo/cmake/: legged_gazeboConfig.cmake
sim/install/share/limx_robot_sdk_sim/cmake/: limx_robot_sdk_simConfig.cmake
sim/install/share/wheel_legged_robot_description/cmake/: wheel_legged_robot_descriptionConfig.cmake
sim/src/limx_robot_sdk_sim/lib/win/: limx_robot_sdk_sim.lib
sim/src/wheel_legged_robot_description/urdf/: robot.urdf
user/: Param.h  UserInterface.cpp  UserInterface.h  joystick.cpp
utility/: cppTypes.h
